# gitreview-core

./: LICENSE  README.md  gitreview-core.cabal  sources.txt
Github/: Review.hs
Github/Review/: Access.hs  Filters.hs  Types.hs  URI.hs
specs/: GitReviewCoreSpecs.hs
specs/Github/Review/: Arbitrary.hs  FiltersSpec.hs  TypesSpec.hs  URISpec.hs
test/: GitReviewTest.hs
