name:                gitreview-core
version:             0.1.0.0
synopsis:            A library for randomly picking a Github commit.
description:         Basically, it just queries github for commits and returns a recent random one.
homepage:            https://github.com/erochest/gitreview-core
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@virginia.edu
copyright:           2013 The Board and Visitors of the University of Virginia
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base ==4.5.*

source-repository this
  type:                git
  location:            git://github.com/erochest/gitreview-core.git
