name:                gitreview-core
version:             0.1.0.0
synopsis:            A library for randomly picking a Github commit.
description:         Basically, it just queries github for commits and returns a recent random one.
homepage:            https://github.com/erochest/gitreview-core
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@virginia.edu
copyright:           2013 The Board and Visitors of the University of Virginia
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Github.Review
  other-modules:       Github.Review.Types
                     , Github.Review.Access
                     , Github.Review.Filters
                     , Github.Review.URI
  build-depends:       base                 == 4.5.*
                     , errors               == 1.4.*
                     , github               == 0.5.*
                     , time                 == 1.4.*
                     , mtl                  == 2.1.*
                     , mwc-random           == 0.12.*
                     , text                 == 0.11.*
                     , network              == 2.4.*
                     , unordered-containers == 0.2.*
                     , hashable             == 1.2.*
                     , dlist                == 0.5

test-suite gitreview-core-specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             GitReviewCoreSpecs.hs
  build-depends:         base       == 4.5.*
                       , gitreview-core
                       , hspec      == 1.4.*
                       , QuickCheck == 2.5.*
                       , github     == 0.5.*
                       , time       == 1.4.*
                       , network    == 2.4.*

test-suite gitreview-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             GitReviewTest.hs
  build-depends:         base       == 4.5.*
                       , gitreview-core
                       , github     == 0.5.*
                       , errors     == 1.4.*
                       , time       == 1.4.*
                       , text       == 0.11.*
                       , network    == 2.4.*
                       , bytestring == 0.9.*

source-repository this
  type:                git
  location:            git://github.com/erochest/gitreview-core.git
